# thoria

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
src/: commands.rs  main.rs  opus_source.rs  source.rs
src/commands/: context.rs  mod.rs  voice.rs
