[package]
name = "thoria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.3.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "voice", "rustls_backend", "model"]}
songbird = "0.3.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "signal"] }
