[package]
name = "thoria"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
dotenv = "0.15.0"
hhmmss = "0.1.0"
poise = "0.3.0"
serde_json = "1.0.85"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "voice", "rustls_backend", "model"] }
songbird = { version = "0.3.0", features = ["builtin-queue", "yt-dlp"] }
symphonia = { version = "0.5.1", features = ['mkv'] }
symphonia-core = "0.5.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "signal"] }
byteorder = "1.4.3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
